--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>Computer Cabo</title>
     </head>
     <body>
-        
+        <h1><center>Home</center></h1>
+        <h2>Multiplayer</h2>
+        <h2>Solo</h2>
+        <h2>Rules</h2>
     </body>
 </html>
