--- a/rules.html
+++ b/rules.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1"> 
+<!--https://webhint.io/docs/user-guide/hints/hint-meta-viewport/, told me what meta I needed to insert-->
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Rules</title>
+    </head>
+    <body>
+        <h1><center>Rules</center></h1>
+        <p>
+          The goal of the game is to have the least number of points. Number cards are worth their number, aces are 1, jacks and queens 10, 
+          red kings -1, black kings 13, and jokers 0.
+        </p>
+    </body>
+</html>
