--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <h1><center>Home</center></h1>
         <h2>Multiplayer</h2>
         <h2>Solo</h2>
-        <h2>Rules</h2>
+        <h2><a href="rules.html">Rules</a></h2>
     </body>
 </html>
