--- a/rules.html
+++ b/rules.html
@@ -34,5 +34,6 @@
             gets one more turn. Then, every player will flip over their cards and count their points. The player with the least points
             wins.
         </p>
+        <p><a href="index.html">Return Home</a></p>
     </body>
 </html>
