--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Computer Cabo</title>
+        <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <h1><center>Home</center></h1>
