--- a/rules.html
+++ b/rules.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8">
         <title>Rules</title>
+        <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <h1><center>Rules</center></h1>
