--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width, initial-scale=1"> 
 <!--https://webhint.io/docs/user-guide/hints/hint-meta-viewport/, told me what meta I needed to insert-->
 <html lang="en">
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>Computer Cabo</title>
     </head>
     <body>
