--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1><center>Home</center></h1>
         <h2>Multiplayer</h2>
-        <h3>Create</h3>
+        <h3><a href="createRoom.html">Create</a></h3>
         <h3>Join</h3>
         <h2>Solo</h2>
         <h2><a href="rules.html">Rules</a></h2>
