updated rules and rooms

--- a/createRoom.html
+++ b/createRoom.html
@@ -4,11 +4,12 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>Room Creation</title>
+        <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <form action="room.html" method="get"> <!--https://www.w3schools.com/html/html_forms.asp-->
             <label for="code">Set Room Code: </label>
-            <input type="text" name="code" value="A1B2">
+            <input type="text" name="code" value="">
             <input type="submit" value="Submit">
         </form>
     </body>
