--- a/rules.html
+++ b/rules.html
@@ -7,32 +7,68 @@
         <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
-        <h1><center>Rules</center></h1>
+        <h1>Rules</h1>
+        <h2>Goal</h2>
+        <p>You want to end up with the least number of points.</p>
+        <h2>Set Up</h2>
         <p>
-            The goal of the game is to have the least number of points. Number cards are worth their number, aces are 1, jacks and queens 10, 
-            red kings -1, black kings 13, and jokers 0.
+            Everyone starts the game with four cards.
+            <br>
+            You get to look at two of your cards.
         </p>
+        <h2>Points</h2>
+        <p>Cards are worth:</p>
+        <ul>
+            <li>Red Kings: -1</li>
+            <li>Jokers: 0</li>
+            <li>Aces: 1</li>
+            <li>2s: 2</li>
+            <li>3s: 3</li>
+            <li>4s: 4</li>
+            <li>5s: 5</li>
+            <li>6s: 6</li>
+            <li>7s: 7</li>
+            <li>8s: 8</li>
+            <li>9s: 9</li>
+            <li>10s: 10</li>
+            <li>Jacks: 10</li>
+            <li>Queens: 10</li>
+            <li>Black Kings: 13</li>
+        </ul>
+        <h2>Powers</h2>
         <p>
-            All players start with 4 cards. They get to choose 2 of those cards to look at, the others will remain unknown. On a player's
-            turn, they draw the top card from the draw pile and look at it. They can decide to switch it with one of their cards or discard
-            it.
+            When you draw cards, you can sometimes place them immediately in the discard pile to take a special 
+            action.
         </p>
+        <ul>
+            <li>7s and 8s: Look at 1 of your cards</li>
+            <li>9s and 10s: Look at 1 of another players cards</li>
+            <li>Jacks and Queens: Switch 1 of your cards with 1 of another players cards</li>
+        </ul>
+        <br>
+        <p>Additionally, you can tap the discard pile to get rid of cards.</p>
+        <ol>
+            <li>You can tap it if it matches one of your cards. You can add it to the discard pile.</li>
+            <li>
+                You can tap it if it matches another players card. You add their card to the discard pile 
+                and replace it with one of your cards.
+            </li>
+        </ol>
         <p>
-            If you discard a 7, 8, 9, 10, jack, or queen after drawing it, you can do something special. With a 7 or 8, you get to look at
-            1 of your cards. With a 9 or 10, you get to look at 1 card from another player. With a jack or queen, you can switch 1 of your
-            cards with another person's card, but you cannot look at either.
+            Only one person can tap each card in the discard pile. If you are wrong, you must add another 
+            card to your hands. You cannot look at this card.
         </p>
+        <h2>Gameplay</h2>
         <p>
-            Additionally, you can slap (click) the discard pile to get rid of cards. You have 2 options. First, if you have a card that
-            is the same number or face card, you can flip it over and add it to the discard pile. If you are wrong, you must add another 
-            card to your hand from the top of the draw pile, without seeing it. Second, if you know another player's card, you can flip
-            their card over, then replacing it with a card from your hand. If wrong, the same thing happens as if you tried to get rid
-            of one of your cards. Two or more players can not slap the same card.
+            Players take turns drawing cards. They can exchange it with one of their cards or discard the 
+            card. If the card has any powers and they discard it, they get to choose whether or not to use the
+            power. Players can tap the discard pile at any time if the card hasn't already been tapped by
+            another player.
         </p>
+        <h2>End</h2>
         <p>
-            To end the game, a player will call Cabo instead of drawing a card from the draw pile. Once they do that, every other player
-            gets one more turn. Then, every player will flip over their cards and count their points. The player with the least points
-            wins.
+            When a player thinks they have won, they call Cabo instead of taking a turn. Every other player
+            gets one more turn, then all cards are flipped over. Whoever has the least points wins.
         </p>
         <p><a href="index.html">Return Home</a></p>
     </body>
