--- a/room.html
+++ b/room.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <h1 id="name">Room: </h1>
-        <script> <!--https://www.w3schools.com/html/html_scripts.asp-->
-            var key = window.location.search.substr(6);
+        <script> //https://www.w3schools.com/html/html_scripts.asp
+            var key = window.location.search.substr(6); //https://css-tricks.com/snippets/javascript/get-url-and-url-parts-in-javascript/
             document.getElementById("name").innerHTML = "Room: " + key;
         </script>
     </body>
