--- a/rules.html
+++ b/rules.html
@@ -41,9 +41,9 @@
             action.
         </p>
         <ul>
-            <li>7s and 8s: Look at 1 of your cards</li>
-            <li>9s and 10s: Look at 1 of another players cards</li>
-            <li>Jacks and Queens: Switch 1 of your cards with 1 of another players cards</li>
+            <li>7s and 8s: Look at one of your cards</li>
+            <li>9s and 10s: Look at one of another players cards</li>
+            <li>Jacks and Queens: Switch one of your cards with one of another players cards</li>
         </ul>
         <br>
         <p>Additionally, you can tap the discard pile to get rid of cards.</p>
