--- a/rules.html
+++ b/rules.html
@@ -20,7 +20,7 @@
         <p>Cards are worth:</p>
         <ul>
             <li>Red Kings: -1</li>
-            <li>Jokers: 0</li>
+            <li>Jokers (Blank): 0</li>
             <li>Aces: 1</li>
             <li>2s: 2</li>
             <li>3s: 3</li>
