--- a/base/room.html
+++ b/base/room.html
@@ -11,5 +11,7 @@
             var key = window.location.search.substr(6); //https://css-tricks.com/snippets/javascript/get-url-and-url-parts-in-javascript/
             document.getElementById("name").innerHTML = "Room: " + key;
         </script>
+        <script src="index.js" type="text/javascript"></script>
+        <!--https://stackoverflow.com/questions/13739568/how-do-i-link-a-javascript-file-to-a-html-file-->
     </body>
 </html>
