--- a/room.html
+++ b/room.html
@@ -11,7 +11,7 @@
             var key = window.location.search.substr(6); //https://css-tricks.com/snippets/javascript/get-url-and-url-parts-in-javascript/
             document.getElementById("name").innerHTML = "Room: " + key;
         </script>
-        <script src="index.js" type="text/javascript"></script>
+        <script src="/Users/sbarton/Desktop/sbarton237.github.io/scenes/game.jss" type="text/javascript"></script>
         <!--https://stackoverflow.com/questions/13739568/how-do-i-link-a-javascript-file-to-a-html-file-->
     </body>
 </html>
