--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>Computer Cabo</title>
-        <link href="base/style.css" rel="stylesheet" type="text/css" />
+        <link href="style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <h1><center>Home</center></h1>
         <h2>Multiplayer</h2>
-        <h3><a href="base/createRoom.html">Create</a></h3>
+        <h3><a href="createRoom.html">Create</a></h3>
         <h3>Join</h3>
         <h2>Solo</h2>
-        <h2><a href="base/rules.html">Rules</a></h2>
+        <h2><a href="rules.html">Rules</a></h2>
     </body>
 </html>
